ncc/testsuite/positive/bug-0872.n
module A
{
  public Foo[T,S]() : void 
    where T : System.IComparable[T], System.IComparable[S]
  {
  }
}


module Program
{
  Main() : void
  {
    A.Foo.[int, int]();
  }
}

/*
BEGIN-OUTPUT 
END-OUTPUT
*/